# mc-tracker

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  dashboard.yml  docker-compose.yml  grafana-dashboard.json  package-lock.json  package.json  pnpm-lock.yaml  prettierrc.json  renovate.json  storage-tracker.sh  tsconfig.json  useful-stuff.md
cli/: index.ts
crates/mc-api-types/: Cargo.toml
crates/mc-api-types/src/: lib.rs  validation.rs
crates/mc-api-types/src/request/: asns.rs  auth.rs  chat.rs  insights.rs  mod.rs  pinned_servers.rs  servers.rs  settings.rs  timeseries.rs  users.rs
crates/mc-api-types/src/response/: admin_servers.rs  asns.rs  auth.rs  auth_config.rs  chat_session.rs  chat_stream.rs  error.rs  health.rs  insights.rs  mod.rs  monitored_server_events.rs  pinned_servers.rs  servers.rs  settings.rs  timeseries.rs  users.rs
crates/mc-api-types/tests/: dto.rs
crates/mc-chat/: Cargo.toml
crates/mc-chat-types/: Cargo.toml
crates/mc-chat-types/src/: compare.rs  error.rs  lib.rs  rank.rs  timeseries.rs
crates/mc-chat/src/: agent.rs  config.rs  error.rs  lib.rs  prompt.rs  traits.rs  types.rs
crates/mc-chat/src/agent/: context.rs  mod.rs  runner.rs  stream.rs  tools_exec.rs
crates/mc-chat/src/llm/: mod.rs  openai_client.rs  turn_usage.rs  types.rs
crates/mc-chat/src/tools/: asn_timeseries_summary.rs  compact.rs  compare_servers.rs  constants.rs  get_asn.rs  get_current_time.rs  get_server.rs  get_server_stats.rs  get_tracker_summary.rs  helpers.rs  list_asns.rs  list_servers.rs  lookup_ip.rs  mod.rs  rank_asns_by_growth.rs  rank_servers_by_all_time_peak.rs  rank_servers_by_growth.rs  rank_servers_by_period_peak.rs  rank_servers_near_peak.rs  registry.rs  search_servers.rs  server_timeseries_summary.rs  tools_impl.rs  total_timeseries_summary.rs
crates/mc-db/: Cargo.toml
crates/mc-db/src/: bootstrap.rs  error.rs  lib.rs
crates/mc-db/src/db/: context.rs  mod.rs  schema.rs
crates/mc-db/src/db/migrations/20250630000000_initial/: down.sql  up.sql
crates/mc-db/src/db/migrations/20250630100000_add_www_origin/: down.sql  up.sql
crates/mc-db/src/db/migrations/20250630110000_remove_environment_setting/: down.sql  up.sql
crates/mc-db/src/db/migrations/20250630120000_remove_maxmind_database_dir_setting/: down.sql  up.sql
crates/mc-db/src/db/migrations/20250630130000_add_server_peak_players/: down.sql  up.sql
crates/mc-db/src/db/migrations/20250630140000_remove_api_bind_settings/: down.sql  up.sql
crates/mc-db/src/db/migrations/20250630150000_metrics_push_cron/: down.sql  up.sql
crates/mc-db/src/db/migrations/20250630160000_add_server_paused/: down.sql  up.sql
crates/mc-db/src/db/migrations/20250703100000_chat_messages/: down.sql  up.sql
crates/mc-db/src/db/migrations/20250703120000_user_flags/: down.sql  up.sql
crates/mc-db/src/db/migrations/20250703140000_pinned_servers/: down.sql  up.sql
crates/mc-db/src/db/migrations/20250704120000_chat_llm_settings/: down.sql  up.sql
crates/mc-db/src/db/migrations/20250704130000_chat_sessions/: down.sql  up.sql
crates/mc-db/src/db/repos/: chat_messages.rs  chat_sessions.rs  mod.rs  monitored_server_events.rs  pinned_servers.rs  servers.rs  settings.rs  users.rs
crates/mc-db/src/model/: chat_session.rs  mod.rs  monitored_server_event.rs  pinned_server.rs  settings.rs  settings_constants.rs  user_flags.rs
crates/mc-db/tests/: integration.rs
crates/mc-db/tests/common/: mod.rs
crates/mc-dns/: Cargo.toml
crates/mc-dns/src/: cache.rs  constants.rs  error.rs  lib.rs  resolve.rs  resolver.rs  types.rs
crates/mc-geo/: Cargo.toml
crates/mc-geo/src/: cache.rs  constants.rs  download.rs  error.rs  ip.rs  lib.rs  lookup.rs  service.rs  types.rs
crates/mc-insights/: Cargo.toml
crates/mc-insights/src/: analyze.rs  catalog.rs  chat.rs  constants.rs  error.rs  insights.rs  lib.rs  range.rs  traits.rs  trend.rs
crates/mc-insights/src/core/: compare.rs  fetch.rs  mod.rs  queries.rs  range.rs  resolution.rs  snapshot.rs  trend.rs
crates/mc-insights/src/metric/: client.rs  mod.rs
crates/mc-insights/src/metric/push/: client.rs  encode.rs  registry.rs
crates/mc-insights/src/metric/query/: asn_queries.rs  lane.rs  mod.rs  promql.rs  query_window.rs  range_query.rs  series_align.rs  server_queries.rs  vm_query.rs
crates/mc-insights/tests/fixtures/push/: player-count.txt
crates/mc-metrics/: Cargo.toml
crates/mc-metrics/src/: client.rs  error.rs  lib.rs  schema.rs
crates/mc-metrics/src/push/: client.rs  encode.rs  mod.rs  registry.rs
crates/mc-metrics/src/query/: asn_queries.rs  mod.rs  promql.rs  query_window.rs  series_align.rs  server_queries.rs  step_policy.rs  vm_query.rs
crates/mc-ping/: Cargo.toml
crates/mc-ping/src/: error.rs  lib.rs  net.rs  retry.rs  types.rs
crates/mc-ping/src/bedrock/: mod.rs  ping.rs  pinger.rs  pong.rs  token.rs
crates/mc-ping/src/java/: handshake.rs  mod.rs  pinger.rs  status.rs  token.rs  varint.rs  version.rs
crates/mc-ping/tests/fixtures/java/: status-chat.json  status-plain.json
crates/mc-settings/: Cargo.toml
crates/mc-settings/src/: derived.rs  lib.rs  registry.rs  setting_type.rs  store.rs
crates/mc-test-support/: Cargo.toml
crates/mc-test-support/src/: lib.rs  mock_llm.rs
crates/mc-tracker/: Cargo.toml  build.rs
crates/mc-tracker/src/: admin.rs  api.rs  chat.rs  chat_config.rs  chat_quota.rs  embedded.rs  insights.rs  lib.rs  main.rs  manager.rs  pinned_servers.rs  settings.rs  settings_api.rs  tracker_read.rs
crates/mc-tracker/src/api/: mod.rs
crates/mc-tracker/src/auth/: handlers.rs  middleware.rs  mod.rs  rate_limit.rs  session.rs
crates/mc-tracker/src/manager/: catalog.rs  mappers.rs  metrics.rs  ping.rs  push.rs  search.rs  timeseries.rs  tracked.rs
crates/mc-tracker/tests/: admin_create.rs  admin_settings.rs  auth.rs  not_found.rs  rbac_and_cors.rs
crates/mc-tracker/tests/common/: mod.rs
data/: config.json  (+4 more)
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: auth_api.rs  chat_api.rs  insights_api.rs  metrics_api.rs  pinned_servers_api.rs
(+422 files in other folders)
