[package]
name = "mc-chat"
description = "LLM chat agent with tool calling for mc-tracker"
edition.workspace = true
version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
chrono = { workspace = true }
futures = "0.3"
mc-api-types = { path = "../mc-api-types" }
mc-insights = { path = "../mc-insights" }
mc-chat-types = { path = "../mc-chat-types" }
mc-common = { path = "../mc-common" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { workspace = true }
uuid = { workspace = true }
jsonschema = "0.29"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
