[package]
name = "mc-geo"
description = "MaxMind GeoIP/ASN lookup"
edition.workspace = true
version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
flate2 = "1"
maxminddb = { version = "0.29", features = ["mmap"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tar = "0.4"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt", "time"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full"] }
wiremock = "0.6"
