[package]
name = "mc-insights"
description = "Time-range parsing and timeseries trend summarization"
edition.workspace = true
version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
mc-api-types = { path = "../mc-api-types" }
mc-metrics = { path = "../mc-metrics" }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
