[package]
name = "mc-insights"
description = "VictoriaMetrics I/O, dashboard timeseries, and chat insights"
edition.workspace = true
version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
chrono = { workspace = true }
futures = "0.3"
mc-api-types = { path = "../mc-api-types" }
mc-chat-types = { path = "../mc-chat-types" }
mc-common = { path = "../mc-common" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
urlencoding = "2"
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
wiremock = "0.6"
