[package]
name = "mc-metrics"
description = "VictoriaMetrics metrics push and query builder"
edition.workspace = true
version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
mc-common = { path = "../mc-common" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
urlencoding = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
wiremock = "0.6"
