[package]
name = "mc-test-support"
description = "Shared test harness for mc-tracker workspace"
edition.workspace = true
version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
axum = "0.8"
mc-db = { path = "../mc-db" }
mc-settings = { path = "../mc-settings" }
mc-chat = { path = "../mc-chat" }
mc-geo = { path = "../mc-geo" }
mc-insights = { path = "../mc-insights" }
mc-tracker = { path = "../mc-tracker" }
futures = "0.3"
serde_json = { workspace = true }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tokio = { workspace = true }
tower = { version = "0.5", features = ["util"] }
