[package]
name = "mc-tracker"
description = "Minecraft server tracker — REST API and metrics push"
edition.workspace = true
version.workspace = true
publish = false

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "mc-tracker"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
hmac = "0.12"
mc-api-types = { path = "../mc-api-types" }
mc-common = { path = "../mc-common" }
mc-db = { path = "../mc-db" }
mc-geo = { path = "../mc-geo" }
mc-metrics = { path = "../mc-metrics" }
mc-ping = { path = "../mc-ping" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
serde_json = { workspace = true }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tower = { version = "0.5", features = ["util"] }
