[package]
name = "mc-tracker"
description = "Minecraft server tracker — REST API and metrics push"
edition.workspace = true
version.workspace = true
publish = false
build = "build.rs"

[features]
default = ["embedded-ui"]
embedded-ui = ["dep:rust-embed"]

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "mc-tracker"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
cron = { workspace = true }
futures = "0.3"
hmac = "0.12"
mc-api-types = { path = "../mc-api-types" }
mc-chat = { path = "../mc-chat" }
mc-chat-types = { path = "../mc-chat-types" }
mc-common = { path = "../mc-common" }
mc-db = { path = "../mc-db" }
mc-dns = { path = "../mc-dns" }
mc-geo = { path = "../mc-geo" }
mc-insights = { path = "../mc-insights" }
mc-ping = { path = "../mc-ping" }
mc-search = { path = "../mc-search" }
mc-settings = { path = "../mc-settings" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
tokio = { workspace = true }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
tower-http = { version = "0.6", features = ["cors"] }
hex = "0.4"
mime_guess = "2"
rust-embed = { version = "8", optional = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
mc-test-support = { path = "../mc-test-support" }
serde_json = { workspace = true }
tower = { version = "0.5", features = ["util"] }
