[package]
name = "mc-integration-tests"
description = "Full-stack integration tests for mc-tracker"
edition.workspace = true
version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
axum = "0.8"
chrono = { workspace = true }
futures = "0.3"
mc-api-types = { path = "../../crates/mc-api-types" }
mc-chat = { path = "../../crates/mc-chat" }
mc-db = { path = "../../crates/mc-db" }
mc-metrics = { path = "../../crates/mc-metrics" }
mc-test-support = { path = "../../crates/mc-test-support" }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { version = "0.5", features = ["util"] }
uuid = { workspace = true }
wiremock = "0.6"
